# aiw

./: .gitignore  README.md  pyproject.toml
aiw/: __init__.py
aiw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aiw/cli/: __init__.py  change_request_cmd.py  decompose_cmd.py  go_cmd.py  init_cmd.py  main.py  spec_cmds.py  tui.py  undo_cmd.py
aiw/infra/: __init__.py  checkpoint.py  constraints.py  layer_check.py  trace.py
aiw/orchestrator/: __init__.py  blocker.py  coder.py  decompose.py  decompose_validator.py  executor.py  fixer.py  spec_phase.py
aiw/tasks/: __init__.py  capsule_log.py  lint.py  scope_validator.py
aiw/workflow/: __init__.py  change_request.py  gates.py  locking.py  recovery.py  state_machine.py
docs/: constraints.yml  prd.md  sdd.md
docs/adrs/: ADR-001-artifact-locked-workflow.md  ADR-002-single-task-scoped-coding-agent.md  ADR-003-explicit-workflow-state-machine.md  ADR-004-markdown-capsule-memory.md  ADR-005-bounded-execution-loop.md  INDEX.MD  (+7 more)
tests/: __init__.py  conftest.py  test_blocker.py  test_capsule_log.py  test_change_request.py  test_checkpoint.py  test_cli_router.py  test_cli_state.py  test_coder.py  test_constraints.py  test_decompose_orchestration.py  test_decompose_validation.py  test_executor_fixer.py  test_executor_happy.py  test_fixer.py  test_gates.py  test_init.py  test_layer_check.py  test_locking.py  test_recovery.py  test_scope_validator.py  test_spec_approve_cmds.py  test_spec_draft_cmds.py  test_state_machine.py  test_task_lint.py  test_trace.py  test_tui.py  test_undo_reset.py
(+45 files in other folders)
